fixed issue with long messages not wrapping properly, updated css to match fix

--- a/react-vite/src/components/ChannelPage/ChannelPage.css
+++ b/react-vite/src/components/ChannelPage/ChannelPage.css
@@ -123,7 +123,6 @@
   display: flex;
   gap: 10px;
   align-items: center;
-  /* width: 69vw; */
 }
 
 .message-owner-date-container {
@@ -132,6 +131,7 @@
   gap: 5px;
   font-size: 15px;
   font-weight: 400;
+  width: 90%;
 }
 
 .date-name-container {
@@ -211,6 +211,8 @@
   box-shadow: 2px 2px 10px lightgrey;
   cursor: pointer;
   z-index: 0;
+  position: sticky;
+  right: 30px;
 }
 
 .profile-modal-messages {
@@ -303,7 +305,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: auto;
+  width: 100%;
 }
 
 .date-separator-bar {
